--- a/.github/workflows/publish-layers.yaml
+++ b/.github/workflows/publish-layers.yaml
@@ -18,8 +18,8 @@ jobs:
     - name: Configure AWS credentials from Tenable Marketplace account
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.MP_AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.MP_AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
     
     - name: Publish Python 3.6  
